more transactionPanel refactoring, flicker fixes, lets see

--- a/webapp/client/public/scss/index.scss
+++ b/webapp/client/public/scss/index.scss
@@ -59,6 +59,9 @@ select{
     color: white;
 }
 
+.canvasContainer{
+    pointer-events: none;
+}
 
 /* general styles */
 
